// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab/> renders horizontal tab correctly 1`] = `
<div>
  <div
    class="sc-bdfBwQ dmxWwQ"
  >
    <div
      class="sc-gsTCUz iFpzxu"
    >
      ALL Items
    </div>
    <div
      class="sc-dlfnbm btJzNe"
    >
      <div
        class="sc-hKgILt bWZNvk"
      >
        Performance
      </div>
      <div
        class="sc-hKgILt kwxITU"
      >
        Recent Activity
      </div>
    </div>
    <div
      title=""
    >
      performance
    </div>
  </div>
</div>
`;

exports[`<Tab/> renders horizontal tab with TabItem disabled 1`] = `
<div>
  <div
    class="sc-bdfBwQ dmxWwQ"
  >
    <div
      class="sc-gsTCUz iFpzxu"
    >
      Tooltip
    </div>
    <div
      class="sc-dlfnbm btJzNe"
    >
      <div
        class="sc-hKgILt iiZBkb"
        disabled=""
      >
        Performance
      </div>
      <div
        class="sc-hKgILt kwxITU"
      >
        Recent Activity
      </div>
    </div>
    <div
      disabled=""
      title=""
    >
      performance
    </div>
  </div>
</div>
`;

exports[`<Tab/> renders vertical tab correctly 1`] = `
<div>
  <div
    class="sc-bdfBwQ kvrjgw"
  >
    <div
      class="sc-dlfnbm frgbOH"
    >
      <div
        class="sc-hKgILt iTCrqA"
      >
        <span>
          Performance
        </span>
      </div>
      <div
        class="sc-hKgILt UdVBa"
      >
        <span>
          Recent Activity
        </span>
      </div>
    </div>
    <div
      title=""
    >
      performance
    </div>
  </div>
</div>
`;
